2007-04-XX Stuart Prescott <bumblebee@nanonanonano.net>
	* feature: bump upgraded installations across to the upgrade script
	* feature: bump unfinished installations across to the install script
	* feature: install script can now set up anonymous browsing, language and TZ
	* bugfix: reenable RADIUS and LDAP auth methods

2007-04-XX Seth Sims <sims1001@alltel.net>
	* feature: XML exporter class as base for all XML exports
	* bugfix: allow "anonymous" user to log in

2007-03-12 Stuart Prescott <bumblebee@nanonanonano.net>
	* 1.1.5 release
	* feature: anonymous browsing mode (disabled by default)
	* feature: internals now use new permissions model
	* feature: interface for editing permissions
	* feature: explicitly set the timezone for date calculations
	* feature: provide forwards/backwards quick navigation on calendar
	  (closes #1574596)
	* feature: calendar automatically reloads after timeout
	  (closes #1574622)
	* feature: bookings can now span multiple timeslots and can be
	  arbitrarily long (closes #1575374, #1575376)
	* feature: include summary of current user's bookings on front page,
	  also summary of group and project bookings (working on #1578369)
	* feature: allow currency symbols to be put into fields without
	  raising an error (closes #1583138)
	* feature: don't lose form data if the user's session times out
	* feature: show multiple instruments on the one calendar
	  (closes #1578376)
	* feature: provide a more polite way of telling the user that the
	  system is offline
	* feature: i18n of the date, time and currency display functions
	* feature: i18n of the number input functions
	* feature: autodetect the installation path where possible
	* bugfix: enforce future booking restrictions when making
	  bookings (closes #1567290)
	* bugfix: dropdown list no longer overlaps existing bookings
	  (closes #1575377)
	* bugfix: allow for https URLs (closes #1568944)
	* bugfix: strip whitespace from input fields before checking if the