@@ -1,0 +1,21 @@
+<?php
+/**
+* HTML footer file included after all the output from the installer.
+*
+* @author    Stuart Prescott
+* @copyright  Copyright Stuart Prescott
+* @license    http://opensource.org/licenses/gpl-license.php GNU Public License
+* @version    $Id$
+* @package    Bumblebee
+* @subpackage Installer
+*/
+
+?>
+      </form>
+
+      <div class="footer">
+        Installer for <a href="http://bumblebeeman.sf.net/">Bumblebee</a>, 
+        released under the <a href="http://www.gnu.org/licenses/gpl.html">GNU GPL</a>.
+      </div>
+      </body>
+    </html>
